# LegendEngine

./: .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeSettings.json  README.md
LegendEngine/: CMakeLists.txt  GenerateResource.sh  GenerateResources.sh  README.md
LegendEngine/Assets/: CMakeLists.txt  solid.frag  solid.vert
LegendEngine/Assets/Compiled/CompiledResources/: solid.frag.h  solid.frag.spv.h  solid.vert.h  solid.vert.spv.h
LegendEngine/Assets/Shaders/: solid.frag  solid.vert
LegendEngine/Assets/VulkanShaders/: solid.frag  textured.frag  textured.vert
LegendEngine/Docs/: ARCHITECTURE.md
LegendEngine/Headers/LE/: Application.hpp  Camera.hpp  LegendEngine.hpp  Object.hpp  Scene.hpp
LegendEngine/Headers/LE/Common/: Assert.hpp  Defs.hpp
LegendEngine/Headers/LE/Components/: Camera.hpp  Component.hpp  ComponentStorage.hpp  Light.hpp  Mesh.hpp  Transform.hpp
LegendEngine/Headers/LE/Events/: EventBus.hpp
LegendEngine/Headers/LE/Graphics/: GraphicsContext.hpp  GraphicsResources.hpp  RenderTarget.hpp  Renderer.hpp  ShaderManager.hpp  VertexBuffer.hpp
LegendEngine/Headers/LE/IO/: Logger.hpp
LegendEngine/Headers/LE/Math/: Constants.hpp  Math.hpp  Matrix4x4.hpp  Quaternion.hpp  Types.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
LegendEngine/Headers/LE/Resources/: Material.hpp  MeshData.hpp  ResourceManager.hpp  Shader.hpp  Texture.hpp  Texture2D.hpp  Texture2DArray.hpp
LegendEngine/Headers/LE/World/: Entity.hpp  Scene.hpp
LegendEngine/Headers/LegendEngine/: Application.hpp  Application2D.hpp  Application3D.hpp  Context.hpp  GraphicsContext.hpp  IApplication.hpp  IRenderer.hpp  LegendEngine.hpp  Scene.hpp  Scene2D.hpp  Scene3D.hpp  Script.hpp  ScriptHolder.hpp  VulkanRenderer.hpp
LegendEngine/Headers/LegendEngine/Common/: Assert.hpp  Defs.hpp  Entrypoint.hpp  IApplicationHolder.hpp  IDisposable.hpp  Logger.hpp  Math.hpp  Mathf.hpp  NativeHolder.hpp  Platform.hpp  Ref.hpp  Stopwatch.hpp  TypeTools.hpp  Types.hpp  UID.hpp  WinGDISucks.hpp
LegendEngine/Headers/LegendEngine/Components/: Component.hpp  ComponentHolder.hpp  LightComponent.hpp  MeshComponent.hpp
LegendEngine/Headers/LegendEngine/Events/: ComponentAddedEvent.hpp  ComponentRemovedEvent.hpp  Event.hpp  EventBus.hpp  EventBusSubscriber.hpp  ObjectDestroyedEvent.hpp  RenderEvent.hpp  UpdateEvent.hpp
LegendEngine/Headers/LegendEngine/Graphics/: GraphicsContext.hpp  IRenderer.hpp  RenderTarget.hpp  Renderer.hpp  Shader.hpp  ShaderManager.hpp  VertexBuffer.hpp  WindowRenderTarget.hpp
LegendEngine/Headers/LegendEngine/IO/: Logger.hpp  LoggerSinks.hpp  TextureData.hpp  TextureLoader.hpp
LegendEngine/Headers/LegendEngine/Math/: Constants.hpp  Defs.hpp  Funcs.hpp  Funcs_Generic.hpp  Funcs_Generic.inl  Funcs_Matrix4x4.hpp  Funcs_Matrix4x4.inl  Funcs_Quaternion.hpp  Funcs_Quaternion.inl  Funcs_Vector2.hpp  Funcs_Vector2.inl  Funcs_Vector3.hpp  Funcs_Vector3.inl  Funcs_Vector4.hpp  Funcs_Vector4.inl  Math.hpp  Matrix4x4.hpp  Matrix4x4.inl  Matrix4x4Funcs.inl  Quaternion.hpp  Quaternion.inl  Types.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
LegendEngine/Headers/LegendEngine/Object3d/: Object.hpp
LegendEngine/Headers/LegendEngine/Objects/: Camera.hpp  Light.hpp  (+2 more)
LegendEngine/Platform/: CMakeLists.txt
LegendEngine/Platform/Done/: OccasionalUpdateBuffer.cpp  OccasionalUpdateBuffer.hpp  SingleUpdateBuffer.cpp  VulkanShader.cpp  VulkanShader.hpp  VulkanTexture2D.hpp
LegendEngine/Platform/Vulkan/: GraphicsContext.cpp  GraphicsContext.hpp  OccasionalUpdateBuffer.cpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  ShaderModule.cpp  SingleUpdateBuffer.hpp  VkDefs.hpp  VulkanBufferStager.cpp  VulkanBufferStager.hpp  VulkanGraphicsContext.cpp  VulkanGraphicsContext.hpp  VulkanRenderTarget.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanShaderManager.cpp  VulkanShaderManager.hpp
LegendEngine/Source/: Application.cpp  Application3D.cpp  Camera.cpp  Context.cpp  GraphicsContext.cpp  IApplication.cpp  IRenderer.cpp  Object.cpp  Scene.cpp  Scene3D.cpp  Script.cpp  ScriptHolder.cpp  VulkanRenderer.cpp
LegendEngine/Source/Common/: IApplicationHolder.cpp  IDisposable.cpp  Logger.cpp  Math.cpp  Mathf.cpp  Stopwatch.cpp  UID.cpp
LegendEngine/Source/Components/: Camera.cpp  Component.cpp  ComponentHolder.cpp  LightComponent.cpp  Mesh.cpp  MeshComponent.cpp  Transform.cpp
LegendEngine/Source/Events/: ComponentAddedEvent.cpp  ComponentRemovedEvent.cpp  Event.cpp  EventBus.cpp  EventBusSubscriber.cpp  ObjectDestroyedEvent.cpp  RenderEvent.cpp  UpdateEvent.cpp
LegendEngine/Source/Graphics/: GraphicsContext.cpp  GraphicsResources.cpp  IRenderer.cpp  RenderTarget.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  VertexBuffer.cpp  WindowRenderTarget.cpp
LegendEngine/Source/IO/: Logger.cpp  LoggerSinks.cpp  TextureData.cpp  TextureLoader.cpp
LegendEngine/Source/Math/: Funcs.cpp  Quaternion.cpp
LegendEngine/Source/Object3d/: Object.cpp
LegendEngine/Source/Objects/: Camera.cpp  Light.cpp  Object.cpp
LegendEngine/Source/Resources/: IResource.cpp  Material.cpp  MeshData.cpp  Resource.cpp  ResourceManager.cpp  Shader.cpp  Texture2D.cpp  Texture2DArray.cpp
LegendEngine/Source/World/: Scene.cpp
LegendEngine/Tests/: CMakeLists.txt  Math.cpp
LegendEngine/Tests/APIMisuse/: CMakeLists.txt  README.md
LegendEngine/Tests/Headless/: CMakeLists.txt  Main.cpp
LegendEngine/Tests/Math/: CMakeLists.txt  Main.cpp  README.md
LegendEngine/Tests/MultipleApps/: CMakeLists.txt  README.md
LegendEngine/Tests/Triangle/: CMakeLists.txt
LegendEngine/Tests/Visuals/: CMakeLists.txt
Legendary/: CMakeLists.txt  README.md
Legendary/Source/: Main.cpp
Platform/: CMakeLists.txt
Platform/Done/: VulkanTexture2D.cpp  VulkanTexture2DArray.cpp  VulkanTexture2DArray.hpp
Platform/Vulkan/: OccasionalUpdateBuffer.cpp  OccasionalUpdateBuffer.hpp  ShaderModule.hpp  SingleUpdateBuffer.cpp  VmaImplementation.cpp  VulkanBufferStager.hpp  VulkanGraphicsContext.hpp  VulkanRenderTarget.cpp  VulkanRenderTarget.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanVertexBuffer.hpp
(+141 files in other folders)
